--- a/index.html
+++ b/index.html
@@ -55,26 +55,26 @@
             </p>
           </div>
           <div class="col-lg-6">
-            <h5 class="text-center description-text">COMPETÊNCIAS</h3>  
+            <h5 class="text-center description-text">CONHECIMENTOS</h3>  
             <div class="img-competencias">
-              <img src="/img/techs/devicon-master/icons/bootstrap/bootstrap-plain.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/html5/html5-original.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/css3/css3-original.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/javascript/javascript-original.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/php/php-plain.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/heroku/heroku-original.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/react/react-original.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/nodejs/nodejs-original.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/yarn/yarn-original.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/express/express-original.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/sequelize/sequelize-original.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/docker/docker-original.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/postgresql/postgresql-plain.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/mongodb/mongodb-original.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/mysql/mysql-original.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/gitlab/gitlab-original.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/linux/linux-original.svg" alt="">
-              <img src="/img/techs/devicon-master/icons/python/python-original.svg" alt="">
+              <img src="/img/techs/devicon-master/icons/bootstrap/bootstrap-plain.svg" alt="bootstrap">
+              <img src="/img/techs/devicon-master/icons/html5/html5-original.svg" alt="html">
+              <img src="/img/techs/devicon-master/icons/css3/css3-original.svg" alt="css">
+              <img src="/img/techs/devicon-master/icons/javascript/javascript-original.svg" alt="javascript">
+              <img src="/img/techs/devicon-master/icons/php/php-plain.svg" alt="php">
+              <img src="/img/techs/devicon-master/icons/heroku/heroku-original.svg" alt="heroku">
+              <img src="/img/techs/devicon-master/icons/react/react-original.svg" alt="react">
+              <img src="/img/techs/devicon-master/icons/nodejs/nodejs-original.svg" alt="nodejs">
+              <img src="/img/techs/devicon-master/icons/yarn/yarn-original.svg" alt="yarn">
+              <img src="/img/techs/devicon-master/icons/express/express-original.svg" alt="express">
+              <img src="/img/techs/devicon-master/icons/sequelize/sequelize-original.svg" alt="sequelize">
+              <img src="/img/techs/devicon-master/icons/docker/docker-original.svg" alt="docker">
+              <img src="/img/techs/devicon-master/icons/postgresql/postgresql-plain.svg" alt="postgresql">
+              <img src="/img/techs/devicon-master/icons/mongodb/mongodb-original.svg" alt="mongodb">
+              <img src="/img/techs/devicon-master/icons/mysql/mysql-original.svg" alt="mysql">
+              <img src="/img/techs/devicon-master/icons/gitlab/gitlab-original.svg" alt="gitlab">
+              <img src="/img/techs/devicon-master/icons/linux/linux-original.svg" alt="linux">
+              <img src="/img/techs/devicon-master/icons/python/python-original.svg" alt="python">
             </div>
           </div>
         </div>
