--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
   <!-- FONT AWESOME -->
   <script src="https://kit.fontawesome.com/5f5a71b78a.js" crossorigin="anonymous"></script>
+
+  <!-- DEVICONS -->
+  <link rel="stylesheet" href="./img/techs/devicon-master/devicon.css">
+  <link rel="stylesheet" href="./img/techs/devicon-master/devicon-colors.css">
 <body>
 </head>
   <div class="container-fluid p-0">
@@ -126,6 +130,17 @@
         </div>
       </div>
     </section>
+
+    <hr>
+    <div class="container">
+      <div class="text-center center-block">
+        <p>Entre em contato comigo!</p>
+        <a href="https://br.linkedin.com/in/gabriel-guizardi-cardoso"><i class="devicon-linkedin-plain colored social"></i></a></a>
+        <a href="https://github.com/gabrielguizardi"><i class="devicon-github-plain colored social"></i></a>
+        <a href="https://gitlab.com/gabrielguizardi"><i class="devicon-gitlab-plain colored social"></i></a>
+      </div>
+    </div>
+    <hr>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
