--- a/index.html
+++ b/index.html
@@ -135,9 +135,11 @@
     <div class="container">
       <div class="text-center center-block">
         <p>Entre em contato comigo!</p>
-        <a href="https://br.linkedin.com/in/gabriel-guizardi-cardoso"><i class="devicon-linkedin-plain colored social"></i></a></a>
-        <a href="https://github.com/gabrielguizardi"><i class="devicon-github-plain colored social"></i></a>
-        <a href="https://gitlab.com/gabrielguizardi"><i class="devicon-gitlab-plain colored social"></i></a>
+        <div class="social">
+          <a href="https://br.linkedin.com/in/gabriel-guizardi-cardoso"><i class="devicon-linkedin-plain colored"></i></a>
+          <a href="https://github.com/gabrielguizardi"><i class="devicon-github-plain colored"></i></a>
+          <a href="https://gitlab.com/gabrielguizardi"><i class="devicon-gitlab-plain colored"></i></a>
+        </div>
       </div>
     </div>
     <hr>
