Add new session - Portifolio

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gabriel Guizardi</title>
 
-  <link rel="icon" type="image/svg+xml" href="./assets/images/logo.svg">
+  <link rel="icon" type="image/svg+xml" href="./assets/images/icons/logo.svg">
 
   <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@300;700&family=Ubuntu&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
 <body>
   <header id="header">
     <div class="container">
-      <img src="./assets/images/logo.svg" alt="G">
+      <img src="./assets/images/icons/logo.svg" alt="G">
       <div>
         <a class="active hover" href="">HOME </a>|<a class="hover" href="https://www.linkedin.com/in/gabriel-guizardi-cardoso/"> CONTATO</a>
       </div>
@@ -36,7 +36,7 @@
     <section id="about">
       <div class="container">
         <h2>Olá. Seja bem vindo(a)!</h2>
-        <p>Jovem e apaixonado por tecnologia, busco conciliar a minha paixão no desenvolvimento novas soluções, utilizando as ferramentas mais atuais do mercado como Docker, Node.js, React Js, React Native e Ruby on Rails.</p>
+        <p>Eu me chamo Gabriel um jovem apaixonado por tecnologia, hoje busco conciliar a minha paixão no desenvolvimento de novas soluções, utilizando as ferramentas mais atuais do mercado como Docker, Node.js, React Js, React Native e Ruby on Rails.</p>
       </div>
     </section>
     <section id="more">
@@ -45,7 +45,7 @@
         <div id="all-sides">
           <div class="left">
             <div class="head">
-              <img src="./assets/images/terminal.svg" alt="terminal">
+              <img src="./assets/images/icons/terminal.svg" alt="terminal">
               <h3>Tecnologias</h3>
               <p>Algumas tecnologias que utilizo no meu dia a dia</p>
             </div>
@@ -78,7 +78,7 @@
           </div>
           <div class="center">
             <div class="head">
-              <img src="./assets/images/brain.svg" alt="brain">
+              <img src="./assets/images/icons/brain.svg" alt="brain">
               <h3>Competências</h3>
               <p>Competencias essencias para o meu estado de desenvolvimento</p>
             </div>
@@ -95,20 +95,51 @@
           </div>
           <div class="right">
             <div class="head">
-              <img src="./assets/images/book.svg" alt="book">
+              <img src="./assets/images/icons/book.svg" alt="book">
               <h3>Projetos</h3>
               <p>Acesse meu git para visualizar minha atividade</p>
             </div>
             <div class="body">
-              <a href="https://github.com/gabrielguizardi">
-                <img src="./assets/images/github.svg" alt="github">
+              <a class="hover" href="https://github.com/gabrielguizardi">
+                <img src="./assets/images/icons/github.svg" alt="github">
               </a>
-              <a href="https://gitlab.com/gabrielguizardi">
-                <img src="./assets/images/gitlab.svg" alt="gitlab">
+              <a class="hover" href="https://gitlab.com/gabrielguizardi">
+                <img src="./assets/images/icons/gitlab.svg" alt="gitlab">
               </a>
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section id="portifolio">
+      <div class="container">
+        <h2>Portifólio</h2>
+        <main>
+          <div class="project">
+            <img src="./assets/images/projects/ecoleta.svg" alt="ecoleta">
+            <div class="overflow">
+              <h3>Ecoleta</h3>
+              <span>06/2020</span>
+              <a class="hover" href="https://github.com/gabrielguizardi/nlw-web">Repositório</a>
+            </div>
+          </div>
+          <div class="project">
+            <img src="./assets/images/projects/ampara.svg" alt="ampara">
+            <div class="overflow">
+              <h3>AmparaAPP</h3>
+              <span>04/2020|05/2020</span>
+              <a class="hover" href="https://github.com/lfp2/hack-for-good-ampara">Repositório</a>
+            </div>
+          </div>
+          <div class="project">
+            <img src="./assets/images/projects/pecas.svg" alt="pecas">
+            <div class="overflow">
+              <h3>PeçasAgro</h3>
+              <span>03/2019|06/2019</span>
+              <a class="hover" href="https://gitlab.com/BDAg/pecas-agricolas">Repositório</a>
+            </div>
+          </div>
+        </main>
       </div>
     </section>
   </main>
